added authorization and authentication
used jwt token authentication

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  
+  "TokenKey" : "super secret key used as a key for jwt tokens when user logins in our application to create a token for further use",
+  "AllowedHosts": "*"
 }
