--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "^18.1.0",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
-    "ng-bootstrap": "^1.6.3",
+    "ngx-bootstrap": "^18.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
