added member edit list and edit profile components to the angular app, added update from functionality

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "TokenKey" : "super secret key used as a key for jwt tokens when user logins in our application to create a token for further use",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings" : {
+    "CloudName" : "DatingApp",
+    "ApiKey" : "758172854543318",
+    "ApiSecret" : "wW51kILQsN_r7JVfe6V_zHQ75-8"
+  }
 }
