--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,7 @@
   "TokenKey" : "super secret key used as a key for jwt tokens when user logins in our application to create a token for further use",
   "AllowedHosts": "*",
   "CloudinarySettings" : {
-    "CloudName" : "DatingApp",
+    "CloudName" : "dzuieskuw",
     "ApiKey" : "758172854543318",
     "ApiSecret" : "wW51kILQsN_r7JVfe6V_zHQ75-8"
   }
